sdks/novus-mundus-ts/tests/results/09-hero-levelup2.txt
bun test v1.2.10 (db2e7d7f)

tests/e2e/09-hero.test.ts:

[1m[34m━━━ Hero System ━━━[0m
[validator] Verifying program binaries...
[validator] All binaries found.
[validator] Killing any existing validator...
[validator] Cleared old ledger.
[validator] Starting solana-test-validator --reset ...
[validator] Programs: Novus Mundus, MPL Core, TLD House, ALT Name Service
[validator] Waiting for RPC... (0.8s)
[validator] Waiting for RPC... (1.8s)
[validator] Ready in 2.0s.
[setup] Airdropping SOL...
[setup] Initializing GameEngine + ShopConfig...
[setup] Initializing cities, heroes, research, shop items (parallel)...
[setup] All infrastructure ready in 2.4s.
(skip) Hero System > Hero Minting > should mint a new hero
(skip) Hero System > Hero Minting > should reject minting without enough resources
(skip) Hero System > Hero Minting > should reject minting non-existent template
(skip) Hero System > Hero Minting > should mint multiple heroes from same template
[PlayerFactory] Initializing player 0 (city 0)
[2m[onchain][0m [2m2aSeyrmyoh..[0m [36m⚡ UserCreated[0m [2muser=2GzaZXQS.. wallet=G9Qrv1ad.. timestamp=1770020340[0m
[2m[onchain][0m [2m2aSeyrmyoh..[0m [36m⚡ PlayerJoinedKingdom[0m [2mkingdomId=0 gameEngine=A1y9ZYn7.. player=8368TZj8.. owner=G9Qrv1ad.. joinedAt=1770020340[0m
[2m[onchain][0m [2m2aSeyrmyoh..[0m [35minit user[0m
[2m[onchain][0m [2m2aSeyrmyoh..[0m [35mCreateIdempotent[0m
[2m[onchain][0m [2m2aSeyrmyoh..[0m [35mInstruction: GetAccountDataSize[0m
[2m[onchain][0m [2m2aSeyrmyoh..[0m [90mProgram return: TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA pQAAAAAAAAA=[0m
[2m[onchain][0m [2m2aSeyrmyoh..[0m [35mInitialize the associated token account[0m
[2m[onchain][0m [2m2aSeyrmyoh..[0m [35mInstruction: InitializeImmutableOwner[0m
[2m[onchain][0m [2m2aSeyrmyoh..[0m [35mPlease upgrade to SPL Token 2022 for immutable owner support[0m
[2m[onchain][0m [2m2aSeyrmyoh..[0m [35mInstruction: InitializeAccount3[0m
[2m[onchain][0m [2m2aSeyrmyoh..[0m [35minit player[0m
[2m[onchain][0m [2m2aSeyrmyoh..[0m [35mCreateIdempotent[0m
[2m[onchain][0m [2m2aSeyrmyoh..[0m [35mInstruction: GetAccountDataSize[0m
[2m[onchain][0m [2m2aSeyrmyoh..[0m [90mProgram return: TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA pQAAAAAAAAA=[0m
[2m[onchain][0m [2m2aSeyrmyoh..[0m [35mInitialize the associated token account[0m
[2m[onchain][0m [2m2aSeyrmyoh..[0m [35mInstruction: InitializeImmutableOwner[0m
[2m[onchain][0m [2m2aSeyrmyoh..[0m [35mPlease upgrade to SPL Token 2022 for immutable owner support[0m
[2m[onchain][0m [2m2aSeyrmyoh..[0m [35mInstruction: InitializeAccount3[0m
[2m[onchain][0m [2m2aSeyrmyoh..[0m [35mInstruction: MintTo[0m
[2m[onchain][0m [2m2aSeyrmyoh..[0m [35mcreate research progress[0m
[2m[onchain][0m [2m2aSeyrmyoh..[0m [33mTotal 6,438 / 526,293 CU[0m
[2m[onchain][0m [2m5o7hwiwLg7..[0m [36m⚡ EstateCreated[0m [2mestate=2zEozDGn.. player=8368TZj8.. playerName=Player #1 timestamp=1770020340[0m
[2m[onchain][0m [2m5o7hwiwLg7..[0m [36m⚡ ItemPurchased[0m [2mplayer=8368TZj8.. playerName=Player #1 itemId=9999 quantity=10 price=10000 currency=0 timestamp=1770020340[0m
[2m[onchain][0m [2m5o7hwiwLg7..[0m [35mcreate estate[0m
[2m[onchain][0m [2m5o7hwiwLg7..[0m [35mpurchase item[0m
[2m[onchain][0m [2m5o7hwiwLg7..[0m [33mTotal 12,566 / 396,001 CU[0m
[2m[onchain][0m [2m2tcMbfUxe6..[0m [36m⚡ BuildingStarted[0m [2mplayer=8368TZj8.. playerName=Player #1 buildingType=0 plot=0 completesAt=1770034741 timestamp=1770020341[0m
[2m[onchain][0m [2m2tcMbfUxe6..[0m [36m⚡ BuildingCompleted[0m [2mplayer=8368TZj8.. playerName=Player #1 buildingType=0 level=1 plot=0 timestamp=1770020341[0m
[2m[onchain][0m [2m2tcMbfUxe6..[0m [35mbuild on estate[0m
[2m[onchain][0m [2m2tcMbfUxe6..[0m [35mInstruction: Burn[0m
[2m[onchain][0m [2m2tcMbfUxe6..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m2tcMbfUxe6..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m2tcMbfUxe6..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m2tcMbfUxe6..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m2tcMbfUxe6..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m2tcMbfUxe6..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m2tcMbfUxe6..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m2tcMbfUxe6..[0m [35mcomplete building[0m
[2m[onchain][0m [2m2tcMbfUxe6..[0m [33mTotal 1,072 / 321,543 CU[0m
[2m[onchain][0m [2m5PNS2vyp2k..[0m [31m✗ tx failed[0m
[2m[onchain][0m [2m5PNS2vyp2k..[0m [36m⚡ BuildingStarted[0m [2mplayer=8368TZj8.. playerName=Player #1 buildingType=9 plot=1 completesAt=1770063542 timestamp=1770020342[0m
[2m[onchain][0m [2m5PNS2vyp2k..[0m [35mbuild on estate[0m
[2m[onchain][0m [2m5PNS2vyp2k..[0m [35mInstruction: Burn[0m
[2m[onchain][0m [2m5PNS2vyp2k..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m5PNS2vyp2k..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m5PNS2vyp2k..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m5PNS2vyp2k..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m5PNS2vyp2k..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m5PNS2vyp2k..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m5PNS2vyp2k..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m5PNS2vyp2k..[0m [35mcomplete building[0m
[2m[onchain][0m [2m5PNS2vyp2k..[0m [33mTotal 564 / 321,525 CU[0m
[2m[onchain][0m [2m5PNS2vyp2k..[0m [31mProgram J4DxMg1RfwRzjpZ3N6D1ULNjuwLHuhe6qLNeX9rYNz3V failed: custom program error: 0x1e1c[0m
[buildAndCompleteBuilding] Building 9 needs split build...
[2m[onchain][0m [2m3iL1yUeukD..[0m [36m⚡ BuildingStarted[0m [2mplayer=8368TZj8.. playerName=Player #1 buildingType=9 plot=1 completesAt=1770063543 timestamp=1770020343[0m
[2m[onchain][0m [2m3iL1yUeukD..[0m [35mbuild on estate[0m
[2m[onchain][0m [2m3iL1yUeukD..[0m [35mInstruction: Burn[0m
[2m[onchain][0m [2m3iL1yUeukD..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m3iL1yUeukD..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m3iL1yUeukD..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m3iL1yUeukD..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m3iL1yUeukD..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m3iL1yUeukD..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m3iL1yUeukD..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m3iL1yUeukD..[0m [33mTotal 10,204 / 331,729 CU[0m
[2m[onchain][0m [2m5udmQWnpLX..[0m [36m⚡ BuildingCompleted[0m [2mplayer=8368TZj8.. playerName=Player #1 buildingType=9 level=1 plot=1 timestamp=1770020343[0m
[2m[onchain][0m [2m5udmQWnpLX..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m5udmQWnpLX..[0m [35mcomplete building[0m
[2m[onchain][0m [2m5udmQWnpLX..[0m [33mTotal 1,115 / 289,662 CU[0m
[2m[onchain][0m [2m3mu6keFNUR..[0m [31m✗ tx failed[0m
[2m[onchain][0m [2m3mu6keFNUR..[0m [35mbuild on estate[0m
[2m[onchain][0m [2m3mu6keFNUR..[0m [33mTotal 360 / 399,850 CU[0m
[2m[onchain][0m [2m3mu6keFNUR..[0m [31mProgram J4DxMg1RfwRzjpZ3N6D1ULNjuwLHuhe6qLNeX9rYNz3V failed: custom program error: 0x1e1a[0m
[buildAndCompleteBuilding] Building 0 already exists, continuing
[2m[onchain][0m [2m3U8qHCQEKm..[0m [31m✗ tx failed[0m
[2m[onchain][0m [2m3U8qHCQEKm..[0m [36m⚡ BuildingStarted[0m [2mplayer=8368TZj8.. playerName=Player #1 buildingType=12 plot=2 completesAt=1770063554 timestamp=1770020354[0m
[2m[onchain][0m [2m3U8qHCQEKm..[0m [35mbuild on estate[0m
[2m[onchain][0m [2m3U8qHCQEKm..[0m [35mInstruction: Burn[0m
[2m[onchain][0m [2m3U8qHCQEKm..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m3U8qHCQEKm..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m3U8qHCQEKm..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m3U8qHCQEKm..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m3U8qHCQEKm..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m3U8qHCQEKm..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m3U8qHCQEKm..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m3U8qHCQEKm..[0m [35mcomplete building[0m
[2m[onchain][0m [2m3U8qHCQEKm..[0m [33mTotal 591 / 321,488 CU[0m
[2m[onchain][0m [2m3U8qHCQEKm..[0m [31mProgram J4DxMg1RfwRzjpZ3N6D1ULNjuwLHuhe6qLNeX9rYNz3V failed: custom program error: 0x1e1c[0m
[buildAndCompleteBuilding] Building 12 needs split build...
[2m[onchain][0m [2m3Pp7zo6Dkd..[0m [36m⚡ BuildingStarted[0m [2mplayer=8368TZj8.. playerName=Player #1 buildingType=12 plot=2 completesAt=1770063555 timestamp=1770020355[0m
[2m[onchain][0m [2m3Pp7zo6Dkd..[0m [35mbuild on estate[0m
[2m[onchain][0m [2m3Pp7zo6Dkd..[0m [35mInstruction: Burn[0m
[2m[onchain][0m [2m3Pp7zo6Dkd..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m3Pp7zo6Dkd..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m3Pp7zo6Dkd..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m3Pp7zo6Dkd..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m3Pp7zo6Dkd..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m3Pp7zo6Dkd..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m3Pp7zo6Dkd..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m3Pp7zo6Dkd..[0m [33mTotal 10,209 / 331,697 CU[0m
[2m[onchain][0m [2m25vv2YvHs4..[0m [36m⚡ BuildingCompleted[0m [2mplayer=8368TZj8.. playerName=Player #1 buildingType=12 level=1 plot=2 timestamp=1770020355[0m
[2m[onchain][0m [2m25vv2YvHs4..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m25vv2YvHs4..[0m [35mcomplete building[0m
[2m[onchain][0m [2m25vv2YvHs4..[0m [33mTotal 1,179 / 289,657 CU[0m
[2m[onchain][0m [2m4vXQG8P4wm..[0m [36m⚡ BuildingStarted[0m [2mplayer=8368TZj8.. playerName=Player #1 buildingType=1 plot=3 completesAt=1770034757 timestamp=1770020357[0m
[2m[onchain][0m [2m4vXQG8P4wm..[0m [36m⚡ BuildingCompleted[0m [2mplayer=8368TZj8.. playerName=Player #1 buildingType=1 level=1 plot=3 timestamp=1770020357[0m
[2m[onchain][0m [2m4vXQG8P4wm..[0m [35mbuild on estate[0m
[2m[onchain][0m [2m4vXQG8P4wm..[0m [35mInstruction: Burn[0m
[2m[onchain][0m [2m4vXQG8P4wm..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4vXQG8P4wm..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4vXQG8P4wm..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4vXQG8P4wm..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4vXQG8P4wm..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4vXQG8P4wm..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4vXQG8P4wm..[0m [35mspeedup estate[0m
[2m[onchain][0m [2m4vXQG8P4wm..[0m [35mcomplete building[0m
[2m[onchain][0m [2m4vXQG8P4wm..[0m [33mTotal 1,234 / 321,439 CU[0m
[2m[onchain][0m [2m3yt5es7GFD..[0m [36m⚡ TeamCreated[0m [2mteam=CB3rcEfs.. teamName=HTeam360144 founder=8368TZj8.. noviBurned=50000 timestamp=1770020359[0m
[2m[onchain][0m [2m3yt5es7GFD..[0m [35mcreate team[0m
[2m[onchain][0m [2m3yt5es7GFD..[0m [35mInstruction: Burn[0m
[2m[onchain][0m [2m3yt5es7GFD..[0m [33mTotal 33,208 / 200,000 CU[0m
[32m  ✓ tx [2m3yt5es7GFDLF..[0m[0m
[2m[onchain][0m [2mLJgsBymvus..[0m [36m⚡ UnitsHired[0m [2mplayer=8368TZj8.. playerName=Player #1 unitType=0 baseQuantity=106 finalQuantity=134 noviBurned=500 timeBonusBps=2641 timestamp=1770020360[0m
[2m[onchain][0m [2mLJgsBymvus..[0m [35mhire units[0m
[2m[onchain][0m [2mLJgsBymvus..[0m [35mInstruction: Burn[0m
[2m[onchain][0m [2mLJgsBymvus..[0m [33mTotal 23,231 / 200,000 CU[0m
[2m[onchain][0m [2m3HqwbBpb1D..[0m [36m⚡ RallyCreated[0m [2mrally=HfJJkGvp.. team=CB3rcEfs.. teamName=HTeam360144 leader=8368TZj8.. target=2i3LYk1L.. gatherAt=1770023960 timestamp=1770020360[0m
[2m[onchain][0m [2m3HqwbBpb1D..[0m [35mcreate rally[0m
[2m[onchain][0m [2m3HqwbBpb1D..[0m [33mTotal 31,804 / 200,000 CU[0m
[32m  ✓ tx [2m3HqwbBpb1DVa..[0m[0m
[2m[onchain][0m [2m2Qi1c2xmUm..[0m [36m⚡ HeroMinted[0m [2mheroMint=9F5PPafW.. heroName=Warrior player=8368TZj8.. playerName=Player #1 templateId=1 rarity=0 timestamp=1770020361[0m
[2m[onchain][0m [2m2Qi1c2xmUm..[0m [35mmint hero[0m
[2m[onchain][0m [2m2Qi1c2xmUm..[0m [35mInstruction: Create[0m
[2m[onchain][0m [2m2Qi1c2xmUm..[0m [35mprograms/mpl-core/src/state/collection.rs:139:Approve[0m
[2m[onchain][0m [2m2Qi1c2xmUm..[0m [35mInstruction: AddPlugin[0m
[2m[onchain][0m [2m2Qi1c2xmUm..[0m [35mprograms/mpl-core/src/state/collection.rs:160:Approve[0m
[2m[onchain][0m [2m2Qi1c2xmUm..[0m [33mTotal 43,368 / 200,000 CU[0m
[32m  ✓ tx [2m2Qi1c2xmUmuU..[0m[0m
[2m[onchain][0m [2m65TVKR4xJu..[0m [36m⚡ HeroLocked[0m [2mheroMint=9F5PPafW.. heroName=Warrior player=8368TZj8.. playerName=Player #1 slot=0 timestamp=1770020361[0m
[2m[onchain][0m [2m65TVKR4xJu..[0m [35mlock hero[0m
[2m[onchain][0m [2m65TVKR4xJu..[0m [35mInstruction: Transfer[0m
[2m[onchain][0m [2m65TVKR4xJu..[0m [35mprograms/mpl-core/src/state/asset.rs:293:Approve[0m
[2m[onchain][0m [2m65TVKR4xJu..[0m [33mTotal 13,586 / 200,000 CU[0m
[32m  ✓ tx [2m65TVKR4xJu6J..[0m[0m
[2m[onchain][0m [2m2Yojp7aXhk..[0m [36m⚡ HeroUnlocked[0m [2mheroMint=9F5PPafW.. heroName=Warrior player=8368TZj8.. playerName=Player #1 timestamp=1770020362[0m
[2m[onchain][0m [2m2Yojp7aXhk..[0m [35munlock hero[0m
[2m[onchain][0m [2m2Yojp7aXhk..[0m [35mInstruction: Transfer[0m
[2m[onchain][0m [2m2Yojp7aXhk..[0m [35mprograms/mpl-core/src/state/asset.rs:293:Approve[0m
[2m[onchain][0m [2m2Yojp7aXhk..[0m [33mTotal 13,454 / 200,000 CU[0m
[32m  ✓ tx [2m2Yojp7aXhkUL..[0m[0m
[2m[onchain][0m [2m3GKYCRCcPe..[0m [31m✗ tx failed[0m
[2m[onchain][0m [2m3GKYCRCcPe..[0m [35mlevel up hero[0m
[2m[onchain][0m [2m3GKYCRCcPe..[0m [33mTotal 3,413 / 200,000 CU[0m
[2m[onchain][0m [2m3GKYCRCcPe..[0m [31mProgram J4DxMg1RfwRzjpZ3N6D1ULNjuwLHuhe6qLNeX9rYNz3V failed: custom program error: 0x17ed[0m
[31m  ✗ tx[0m
[31m    Transaction 3GKYCRCcPeRP3CJHczY7bKENhxU6izey2ZjcJyEbxbL5jqqdYYgqmvzvVrVfcDDi1g3z7W5W7va5QpjPkbYLu1dj resulted in an error. [0m
2174 |       default:
2175 |         {
2176 |           message = `Unknown action '${(a => a)(action)}'`;
2177 |         }
2178 |     }
2179 |     super(message);
           ^
error: Transaction 3GKYCRCcPeRP3CJHczY7bKENhxU6izey2ZjcJyEbxbL5jqqdYYgqmvzvVrVfcDDi1g3z7W5W7va5QpjPkbYLu1dj resulted in an error. 
Status: ({"err":{"InstructionError":[0,{"Custom":6125}]}}). 
Catch the `SendTransactionError` and call `getLogs()` on it for full details.
  signature: "3GKYCRCcPeRP3CJHczY7bKENhxU6izey2ZjcJyEbxbL5jqqdYYgqmvzvVrVfcDDi1g3z7W5W7va5QpjPkbYLu1dj",
 transactionMessage: "Status: ({\"err\":{\"InstructionError\":[0,{\"Custom\":6125}]}})",
 transactionLogs: undefined,

      at new SendTransactionError (/Users/k/solana/game/vig-internal/sdks/novus-mundus-ts/node_modules/@solana/web3.js/lib/index.cjs.js:2179:5)
      at <anonymous> (/Users/k/solana/game/vig-internal/sdks/novus-mundus-ts/node_modules/@solana/web3.js/lib/index.cjs.js:2302:13)
(fail) Hero System > Hero Level Up > should level up hero with fragments [23537.74ms]
(skip) Hero System > Hero Level Up > should reject level up without enough fragments
(skip) Hero System > Hero Level Up > should reject level up at max level
(skip) Hero System > Hero Level Up > should increase stats on level up
(skip) Hero System > Hero Lock/Unlock > should lock hero for expedition
(skip) Hero System > Hero Lock/Unlock > should unlock hero after expedition
(skip) Hero System > Hero Lock/Unlock > should lock and unlock without expedition
(skip) Hero System > Hero Lock/Unlock > should reject lock on occupied slot
(skip) Hero System > Hero Assignment > should assign hero for defense
(skip) Hero System > Hero Assignment > should remove defensive assignment
(skip) Hero System > Hero Assignment > should reject assigning empty slot
(skip) Hero System > Hero Stats > should have correct base stats from template
(skip) Hero System > Hero Stats > should apply hero bonuses when locked
(skip) Hero System > Hero Stats > should have specialization bonuses
(skip) Hero System > Hero Equipment > should lock hero for equipment readiness
(skip) Hero System > Hero Equipment > should unlock hero after removing equipment
(skip) Hero System > Hero Equipment > should reject equipping to non-locked hero slot
(skip) Hero System > Hero Collection > should reject duplicate collection creation
(skip) Hero System > Hero Collection > should reject collection creation by non-DAO
(skip) Hero System > Hero Experience > should gain XP from locking hero
(skip) Hero System > Hero Experience > should gain XP from expeditions
(skip) Hero System > Hero Experience > should calculate XP to next level
(skip) Hero System > Hero Rarity > should mint heroes with rarity from template
(skip) Hero System > Hero Rarity > should apply rarity stat multipliers when locked
(skip) Hero System > Hero Trading > should mint hero to wallet
(skip) Hero System > Hero Trading > should reject unlock with wrong slot
(skip) Hero System > Hero Trading > should verify locked hero is owned by PDA

 0 pass
 30 skip
 1 fail
Ran 31 tests across 1 files. [29.07s]
